infra/argocd/apps/istio/argo-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "argo.example.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
spec:
  parentRefs:
  - name: argocd-gateway
  hostnames: ["argo.example.local"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd
    backendRefs:
    - name: argocd-server
      port: 80
